# audio_metrics

./: .gitignore  ABC_weighting.py  CLAUDE.md  LICENSE  README.md  audio_metrics.py  pyproject.toml  test_audio_metrics.py
test/: test_audio_metrics.py
test/files/: Animals.flac
