[project]
name = "audio-metrics"
version = "0.1.0"
requires-python = ">=3.13, <3.14"
dependencies = [
    "cyclopts",
    "soundfile",
    "numpy",
    "scipy",
    "pymediainfo",
    "rich",
    "mutagen>=1.47.0",
]

[project.scripts]
media_compare = "audio_metrics:app"

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-p no:launch_testing -p no:launch_testing_ros_pytest_entrypoint -p no:ament_copyright -p no:ament_flake8 -p no:ament_pep257 -p no:ament_lint -p no:ament_xmllint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["audio_metrics.py", "ABC_weighting.py"]
